tests/ui/string_plus.stderr
Error [E0109]: text isn't joined with `+`
  --> tests/ui/string_plus.jet:4:16
    |
  4 |     val full = first + last;
    |                ^^^^^^^^^^^^
 Why: there's one way to build text: interpolation (S8)
 Fix: write the pieces inside one string: "{a}{b}"
