tests/ui/string_plus.lex
fn main() {
    val first = "Ada";
    val last = "Lovelace";
    val full = first + last;
    print(full);
}
